k8s/manifests/homepage/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.greedo.net`)
      kind: Rule
      services:
        - name: homepage
          port: 80
  tls: {}
